--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       background-color: #fff;
       position: relative;
       overflow: hidden;
-      touch-action: pan-x pan-y;
+      touch-action: none;
       cursor: grab;
       user-select: none;
     }
@@ -55,7 +55,6 @@
       overflow: auto;
       display: none;
       z-index: 1000;
-      transform: translate(-50%, 0);
     }
     .tooltip img {
       width: 100%;
@@ -104,6 +103,7 @@
   let activeMarker = null;
   let initialPinchDistance = null;
   let initialScale = 1;
+  let pinchCenter = null;
 
   const tileSize = 256;
   const mapWidth = 1000;
@@ -168,18 +168,19 @@
             activeTooltip = tooltip;
             activeMarker = marker;
           }
+          updateTooltipPosition();
         });
 
         mapWrapper.appendChild(marker);
-        mapWrapper.appendChild(tooltip);
+        document.body.appendChild(tooltip);
 
         tooltip.dataset.x = point.x;
         tooltip.dataset.y = point.y;
       });
     });
 
-  document.body.addEventListener('click', () => {
-    if (activeTooltip) {
+  document.body.addEventListener('click', (e) => {
+    if (activeTooltip && !e.target.closest('.tooltip')) {
       activeTooltip.style.display = 'none';
       activeTooltip = null;
       activeMarker = null;
@@ -191,14 +192,11 @@
     const rect = container.getBoundingClientRect();
     const offsetX = e.clientX - rect.left - originX;
     const offsetY = e.clientY - rect.top - originY;
-
     const delta = e.deltaY < 0 ? 1.1 : 0.9;
     const newScale = scale * delta;
     if (newScale < 0.5 || newScale > 5) return;
-
     originX -= offsetX * (delta - 1);
     originY -= offsetY * (delta - 1);
-
     scale = newScale;
     updateTransform();
   }, { passive: false });
@@ -207,6 +205,10 @@
     if (e.touches.length === 2) {
       initialPinchDistance = getDistance(e.touches[0], e.touches[1]);
       initialScale = scale;
+      const rect = container.getBoundingClientRect();
+      const cx = (e.touches[0].clientX + e.touches[1].clientX) / 2 - rect.left;
+      const cy = (e.touches[0].clientY + e.touches[1].clientY) / 2 - rect.top;
+      pinchCenter = { x: cx, y: cy };
     } else if (e.touches.length === 1) {
       isDragging = true;
       startX = e.touches[0].clientX - originX;
@@ -215,17 +217,13 @@
   });
 
   container.addEventListener('touchmove', (e) => {
-    if (e.touches.length === 2 && initialPinchDistance !== null) {
+    if (e.touches.length === 2 && initialPinchDistance !== null && pinchCenter) {
       const currentDistance = getDistance(e.touches[0], e.touches[1]);
       const scaleFactor = currentDistance / initialPinchDistance;
       const newScale = initialScale * scaleFactor;
-
       if (newScale >= 0.5 && newScale <= 5) {
-        const rect = container.getBoundingClientRect();
-        const centerX = (e.touches[0].clientX + e.touches[1].clientX) / 2 - rect.left;
-        const centerY = (e.touches[0].clientY + e.touches[1].clientY) / 2 - rect.top;
-        originX -= (centerX - originX) * (scaleFactor - 1);
-        originY -= (centerY - originY) * (scaleFactor - 1);
+        originX -= (pinchCenter.x - originX) * (scaleFactor - 1);
+        originY -= (pinchCenter.y - originY) * (scaleFactor - 1);
         scale = newScale;
         updateTransform();
       }
@@ -238,6 +236,7 @@
 
   container.addEventListener('touchend', () => {
     initialPinchDistance = null;
+    pinchCenter = null;
     isDragging = false;
   });
 
@@ -261,9 +260,9 @@
     container.style.cursor = 'grab';
   });
 
-  function getDistance(touch1, touch2) {
-    const dx = touch2.clientX - touch1.clientX;
-    const dy = touch2.clientY - touch1.clientY;
+  function getDistance(t1, t2) {
+    const dx = t2.clientX - t1.clientX;
+    const dy = t2.clientY - t1.clientY;
     return Math.sqrt(dx * dx + dy * dy);
   }
 
@@ -272,9 +271,11 @@
     document.querySelectorAll('.marker').forEach(m => {
       m.style.transform = `scale(${1 / scale})`;
     });
+    updateTooltipPosition();
+  }
 
-    // Обновляем позицию tooltip если активен
-    if (activeTooltip && activeMarker) {
+  function updateTooltipPosition() {
+    if (activeTooltip && activeTooltip.dataset.x && activeTooltip.dataset.y) {
       const x = parseFloat(activeTooltip.dataset.x);
       const y = parseFloat(activeTooltip.dataset.y);
       const screenX = originX + x * scale;
