--- a/index.html
+++ b/index.html
@@ -78,31 +78,10 @@
       max-width: 90vw;
       max-height: 90vh;
     }
-    .zoom-controls {
-      position: absolute;
-      top: 10px;
-      left: 10px;
-      display: flex;
-      flex-direction: column;
-      gap: 5px;
-      z-index: 1500;
-    }
-    .zoom-controls button {
-      background: #fff;
-      border: 1px solid #ccc;
-      font-size: 18px;
-      width: 36px;
-      height: 36px;
-      cursor: pointer;
-    }
   </style>
 </head>
 <body>
 <div id="map-container">
-  <div class="zoom-controls">
-    <button onclick="zoomMap(1.2)">+</button>
-    <button onclick="zoomMap(0.8)">−</button>
-  </div>
   <div id="map-wrapper"></div>
 </div>
 <div id="modal" class="modal" onclick="this.style.display='none'">
@@ -128,10 +107,10 @@
   let pinchScreen = null;
 
   const tileSize = 256;
-  const tilesX = 113;
-  const tilesY = 113;
-  const mapWidth = tileSize * tilesX; // 28928
-  const mapHeight = tileSize * tilesY;
+const tilesX = 113;
+const tilesY = 113;
+const mapWidth = tileSize * tilesX; // 28928
+const mapHeight = tileSize * tilesY;
   const tileMap = {};
 
   function centerMap() {
@@ -142,23 +121,209 @@
     updateTransform();
   }
 
-  function zoomMap(factor) {
+  function renderTiles() {
     const containerRect = container.getBoundingClientRect();
-    const centerX = containerRect.width / 2;
-    const centerY = containerRect.height / 2;
-    const offsetX = centerX - originX;
-    const offsetY = centerY - originY;
+    const viewLeft = -originX / scale;
+    const viewTop = -originY / scale;
+    const viewRight = viewLeft + containerRect.width / scale;
+    const viewBottom = viewTop + containerRect.height / scale;
 
-    const newScale = scale * factor;
-    if (newScale < 0.2 || newScale > 6) return;
+    const startX = Math.floor(viewLeft / tileSize);
+    const startY = Math.floor(viewTop / tileSize);
+    const endX = Math.ceil(viewRight / tileSize);
+    const endY = Math.ceil(viewBottom / tileSize);
 
-    originX -= offsetX * (factor - 1);
-    originY -= offsetY * (factor - 1);
-    scale = newScale;
-    updateTransform();
+    // Remove old tiles
+    for (const key in tileMap) {
+      const [x, y] = key.split(',').map(Number);
+      if (x < startX || x > endX || y < startY || y > endY) {
+        mapWrapper.removeChild(tileMap[key]);
+        delete tileMap[key];
+      }
+    }
+
+    // Add visible tiles
+    for (let y = startY; y <= endY; y++) {
+      for (let x = startX; x <= endX; x++) {
+        if (x < 0 || y < 0 || x >= tilesX || y >= tilesY) continue;
+        const key = `${x},${y}`;
+        if (tileMap[key]) continue;
+        const tile = document.createElement('img');
+        tile.src = `https://res.cloudinary.com/dypsj7tre/image/upload/tiles/tile_${x}_${y}.jpg`;
+        tile.className = 'tile';
+        tile.style.left = `${x * tileSize}px`;
+        tile.style.top = `${y * tileSize}px`;
+        mapWrapper.appendChild(tile);
+        tileMap[key] = tile;
+      }
+    }
   }
 
-  // остальной код без изменений...
+  function updateTransform() {
+    mapWrapper.style.transform = `translate(${originX}px, ${originY}px) scale(${scale})`;
+    document.querySelectorAll('.marker').forEach(m => {
+      m.style.transform = `scale(${1 / scale})`;
+    });
+    updateTooltipPosition();
+    renderTiles();
+  }
+
+  function updateTooltipPosition() {
+    if (activeTooltip && activeTooltip.dataset.x && activeTooltip.dataset.y) {
+      const x = parseFloat(activeTooltip.dataset.x);
+      const y = parseFloat(activeTooltip.dataset.y);
+      const screenX = originX + x * scale;
+      const screenY = originY + y * scale;
+      activeTooltip.style.left = `${screenX}px`;
+      activeTooltip.style.top = `${screenY + 60}px`;
+    }
+  }
+
+  fetch('points.json')
+    .then(res => res.json())
+    .then(points => {
+      points.forEach((point, i) => {
+        const marker = document.createElement('div');
+        marker.className = 'marker';
+        marker.style.left = `${point.x}px`;
+        marker.style.top = `${point.y}px`;
+
+        const tooltip = document.createElement('div');
+        tooltip.className = 'tooltip';
+        tooltip.innerHTML = `
+          <img src="${point.image}" alt="Точка">
+          <p>${point.text}</p>
+        `;
+
+        const img = tooltip.querySelector('img');
+        img.addEventListener('click', (e) => {
+          e.stopPropagation();
+          modalImg.src = point.image;
+          modal.style.display = 'flex';
+        });
+
+        marker.addEventListener('click', (e) => {
+          e.stopPropagation();
+          if (activeTooltip && activeTooltip !== tooltip) {
+            activeTooltip.style.display = 'none';
+          }
+
+          if (tooltip.style.display === 'block') {
+            tooltip.style.display = 'none';
+            activeTooltip = null;
+            activeMarker = null;
+          } else {
+            tooltip.style.display = 'block';
+            activeTooltip = tooltip;
+            activeMarker = marker;
+          }
+          updateTooltipPosition();
+        });
+
+        mapWrapper.appendChild(marker);
+        document.body.appendChild(tooltip);
+
+        tooltip.dataset.x = point.x;
+        tooltip.dataset.y = point.y;
+      });
+    });
+
+  document.body.addEventListener('click', (e) => {
+    if (activeTooltip && !e.target.closest('.tooltip')) {
+      activeTooltip.style.display = 'none';
+      activeTooltip = null;
+      activeMarker = null;
+    }
+  });
+
+  container.addEventListener('wheel', (e) => {
+    e.preventDefault();
+    const rect = container.getBoundingClientRect();
+    const offsetX = e.clientX - rect.left - originX;
+    const offsetY = e.clientY - rect.top - originY;
+    const delta = e.deltaY < 0 ? 1.1 : 0.9;
+    const newScale = scale * delta;
+    if (newScale < 0.2 || newScale > 6) return;
+    originX -= offsetX * (delta - 1);
+    originY -= offsetY * (delta - 1);
+    scale = newScale;
+    updateTransform();
+  }, { passive: false });
+
+  container.addEventListener('touchstart', (e) => {
+    if (e.touches.length === 2) {
+      initialPinchDistance = getDistance(e.touches[0], e.touches[1]);
+      initialScale = scale;
+      const rect = container.getBoundingClientRect();
+      const screenX = (e.touches[0].clientX + e.touches[1].clientX) / 2 - rect.left;
+      const screenY = (e.touches[0].clientY + e.touches[1].clientY) / 2 - rect.top;
+      pinchScreen = { x: screenX, y: screenY };
+      pinchCenter = {
+        x: (screenX - originX) / scale,
+        y: (screenY - originY) / scale
+      };
+    } else if (e.touches.length === 1) {
+      isDragging = true;
+      startX = e.touches[0].clientX - originX;
+      startY = e.touches[0].clientY - originY;
+    }
+  });
+
+  container.addEventListener('touchmove', (e) => {
+    if (e.touches.length === 2 && initialPinchDistance !== null && pinchCenter && pinchScreen) {
+      const currentDistance = getDistance(e.touches[0], e.touches[1]);
+      const scaleFactor = currentDistance / initialPinchDistance;
+      const newScale = initialScale * scaleFactor;
+      if (newScale >= 0.5 && newScale <= 5) {
+        scale = newScale;
+        originX = pinchScreen.x - pinchCenter.x * scale;
+        originY = pinchScreen.y - pinchCenter.y * scale;
+        updateTransform();
+      }
+    } else if (e.touches.length === 1 && isDragging) {
+      originX = e.touches[0].clientX - startX;
+      originY = e.touches[0].clientY - startY;
+      updateTransform();
+    }
+  });
+
+  container.addEventListener('touchend', () => {
+    initialPinchDistance = null;
+    pinchCenter = null;
+    pinchScreen = null;
+    isDragging = false;
+  });
+
+  container.addEventListener('mousedown', (e) => {
+    e.preventDefault();
+    isDragging = true;
+    startX = e.clientX - originX;
+    startY = e.clientY - originY;
+    container.style.cursor = 'grabbing';
+  });
+
+  container.addEventListener('mousemove', (e) => {
+    if (!isDragging) return;
+    originX = e.clientX - startX;
+    originY = e.clientY - startY;
+    updateTransform();
+  });
+
+  container.addEventListener('mouseup', () => {
+    isDragging = false;
+    container.style.cursor = 'grab';
+  });
+
+  function getDistance(t1, t2) {
+    const dx = t2.clientX - t1.clientX;
+    const dy = t2.clientY - t1.clientY;
+    return Math.sqrt(dx * dx + dy * dy);
+  }
+
+  window.addEventListener('load', () => {
+    centerMap();
+    renderTiles();
+  });
 </script>
 </body>
 </html>
